@@ -1,23 +1,25 @@
 Package: metasens
 Title: Advanced Statistical Methods to Model and Adjust for Bias in
         Meta-Analysis
-Version: 0.3-0
+Version: 0.3-1
 Authors@R: c(person("Guido","Schwarzer", email="sc@imbi.uni-freiburg.de", role=c("aut","cre")),
     person("James","Carpenter", role="aut"),
     person("Gerta","Rücker", role="aut"))
 Depends: meta (>= 4.0-0)
-Date: 2016-02-16
-Description: The following methods are implemented to evaluate how sensitive the results of a meta-analysis are to potential bias in meta-analysis:
- - Copas selection model;
- - limit meta-analysis;
- - upper bound for outcome reporting bias.
+Date: 2016-10-15
+URL: https://github.com/guido-s/metasens
+        http://meta-analysis-with-r.org
+Description: The following methods are implemented to evaluate how sensitive the results of a meta-analysis are to potential bias in meta-analysis and to support Schwarzer et al. (2015) <DOI:10.1007/978-3-319-21416-0>, Chapter 5 "Small-Study Effects in Meta-Analysis":
+ - Copas selection model described in Copas & Shi (2001) <DOI:10.1177/096228020101000402>;
+ - limit meta-analysis by Rücker et al. (2011) <DOI:10.1093/biostatistics/kxq046>;
+ - upper bound for outcome reporting bias by Copas & Jackson (2004) <DOI:10.1111/j.0006-341X.2004.00161.x>.
 License: GPL (>= 2)
 Encoding: UTF-8
 NeedsCompilation: no
-Packaged: 2016-02-17 10:16:09 UTC; sc
+Packaged: 2016-10-15 15:11:54 UTC; sc
 Author: Guido Schwarzer [aut, cre],
   James Carpenter [aut],
   Gerta Rücker [aut]
 Maintainer: Guido Schwarzer <sc@imbi.uni-freiburg.de>
 Repository: CRAN
-Date/Publication: 2016-02-17 12:11:45
+Date/Publication: 2016-10-15 18:52:03
