@@ -278,7 +278,7 @@ copas(x,
   Carpenter JR, Schwarzer G, Rücker G, Künstler R (2009),
   Empirical evaluation showed that the Copas selection model provided
   a useful summary in 80\% of meta-analyses.
-  \emph{Journal of Clinical Epidemiology}, \bold{62}, 624--631.
+  \emph{Journal of Clinical Epidemiology}, \bold{62}, 624--31.
   
   Copas J (1999),
   What works?: Selectivity models and meta-analysis.
@@ -287,16 +287,16 @@ copas(x,
 
   Copas J, Shi JQ (2000),
   Meta-analysis, funnel plots and sensitivity analysis.
-  \emph{Biostatistics}, \bold{1}, 247--262.
+  \emph{Biostatistics}, \bold{1}, 247--62.
 
   Copas JB, Shi JQ (2001),
   A sensitivity analysis for publication bias in systematic reviews.
-  \emph{Statistical Methods in Medical Research}, \bold{10}, 251--265.
+  \emph{Statistical Methods in Medical Research}, \bold{10}, 251--65.
 
   Schwarzer G, Carpenter J, Rücker G (2010),
   Empirical evaluation suggests Copas selection model preferable to
   trim-and-fill method for selection bias in meta-analysis.
-  \emph{Journal of Clinical Epidemiology}, \bold{63}, 282--288.
+  \emph{Journal of Clinical Epidemiology}, \bold{63}, 282--88.
 }
 
 \author{James Carpenter \email{James.Carpenter@lshtm.ac.uk}, Guido Schwarzer \email{sc@imbi.uni-freiburg.de}}
